menambahkan fitur todo

--- a/ayu.html
+++ b/ayu.html
@@ -1,34 +1,47 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title >WEB DEVELOPER</title>
+	<title >AYU SRI WAHYUNI</title>
 	<link rel="stylesheet" href="./ayu.css">
 </head>
+<style>
+	table, th, td{
+		border: 1px solid black;
+		border-collapse: collapse;
+	}
+	th, td{
+		padding: 5px;
+		text-align: left;
+	}
+</style>
 <body>
-
 	<div class="container">
 		<div class="header">
-			<h1 class="judul">WEB DEVELOPER</h1>
+			<h1 class="judul">PROTOFILO</h1>
 			<ul>
 				<li><a href="#">home</a></li>
 				<li><a href="#">about</a></li>
-				<li><a href="#">products</a></li>
-				<li><a href="#">services</a></li>
+				<li><a href="todo.html">todo</a></li>
+				<li><a href="#">blog</a></li>
 				<li><a href="#">contact</a></li>
 			</ul>
 		</div>
 		<div class="hero"></div>
 		<div class="content">
-			<h2>judul Artikel</h2>
+			<h2>who am i HELLO</h2>
 			<p class="penulis">ditulis oleh <a href="#">poppo janitrabtari</a>pada 20 juni 2020</p>
+			<p>I am a ui developer. it a long time fact that a reader will be distracted by te readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution.</p>
+			<p>It is a fact that a reader will be distracted by the readable content of a page when looking at its layout.The point of using lorem ipsum is that is has a more-or-less normal distribution.</p>
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis quia pariatur incidunt vel. Ex tenetur commodi neque, molestiae iure ab doloribus unde, natus saepe dolor tempore quis nesciunt? Laborum, incidunt.</p>
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis quia pariatur incidunt vel. Ex tenetur commodi neque, molestiae iure ab doloribus unde, natus saepe dolor tempore quis nesciunt? Laborum, incidunt.</p>
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis quia pariatur incidunt vel. Ex tenetur commodi neque, molestiae iure ab doloribus unde, natus saepe dolor tempore quis nesciunt? Laborum, incidunt.</p>
 		
+	<!--footer-->		
 		</div>
 		<div class="footer">
 			<p class="copy">Copyright 2020. popojanitrabtari</p>
 		</div>
 	</div>
+	<script src="ayu.js"></script>
 </body>
 </html>
